# rinha-de-backend-2023-python

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: db.py  env.py  redis.py
app/dto/: pessoa_dto.py
app/service/: pessoa_service.py
